--- a/TestsProject/Web.config
+++ b/TestsProject/Web.config
@@ -20,6 +20,7 @@
   </appSettings>
   <system.web>
          <roleManager enabled="true" />
+		 <customErrors mode="Off"/>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
